--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pa/react-date-range",
+  "name": "pa-react-date-range",
   "version": "3.3.2",
   "description": "A React component for choosing dates and date ranges.",
   "main": "dist/index.js",
